# executive-assistant

./: .dockerignore  .env  .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BUGS.md  BUG_REPORT.md  CACHE_SECURITY_ANALYSIS.md  CLAUDE.md  COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  EXECUTIVE_ASSISTANT_VERDICT.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_USER_CUSTOMIZATION_PLAN.md  LANGFUSE_DOCKER_PLAN.md  LLM_MODEL_GUIDE.md  MIDDLEWARE.md  Makefile  Memory_Tuning_Guide.md  PER_THREAD_AGENT_CACHE_DESIGN.py  PLAN.md  README.md  TECHNICAL_ARCHITECTURE.md  TEST.md  TEST_PLAN.md  TEST_REPORT.md  TEST_RESULTS.md  TEST_RESULTS_PHASE1.md  THREAD_ID_MAPPING_DESIGN.py  TODO.md  TOKEN_CONSUMPTION_ANALYSIS.md  benchmark.py  benchmark_checkpoint.py  bug_findings.md  claude.md  comprehensive_results.txt  config.schema.yaml  (+47 more)
.langgraph_api/: .langgraph_ops.pckl
USER_MANUALS/: COMPLETE_EXAMPLES.md  CONVERSATION_TO_SKILL.md  ESSENTIAL_COMMANDS.md  GETTING_STARTED.md  MEMORY_AND_KNOWLEDGE.md  README.md
bugs/: review_findings.md
discussions/: agent-name-config-plan-20250118.md  bugs-found-20250118.md  byo-mcp-feature-request-20260121.md  cassey-findings-and-repairs.md  checkpoint-corruption-issue.md  command-formatting-audit-20260122.md  config-refactor-20260118.md  context-editing-implementation-plan-20260116.md  context-editing-middleware-plan-20260116-1655.md  data-migration-plan-20260115-2339.md  db-storage-audit-20260121.md  db-switch-to-sqlite-plan.md  db-terminology-fix.md  debug-logging-improvements-20250118.md  dockerfile-plan-20260116-1930.md  duckdb-fts-observations.md  duckdb-kb-implementation-plan.md  duckdb-vss-local-embeddings-plan-20260116-2235.md  duckdb-vss-local-embeddings-plan-20260116-2235.md (continued)  email-channel-implementation-20250119.md  empty-message-bug-fix-20250119.md  env-vars-cleanup-20260116-2050.md  executive_assistant-findings-and-repairs.md  flow-agent-registry-plan.md  framework-agnostic-agent-design-20250119.md  frontend-plan-20260116.md  http-sse-status-updates-design.md  kb-db-summary-checkpoint-plan-20260116-0101.md  kb-implementation-20260115-1738.md  kb-to-vs-rename.md  lancedb-vector-store-implementation-20250119.md  langchain-agent-plan-20260116-1118.md  langchain-skills-research.md  llm-benchmark-plan-20250118.md  llm-config-plan.md  llm-performance-benchmark-results-20250119.md  llm_comparison_20260119_025011.json  llm_comparison_20260119_025338.json  llm_comparison_20260119_025639.json  mem-implementation-plan-20260116-0037.md  (+47 more)
docker/: .env.example  Caddyfile  Dockerfile  README.md  build.sh  config.yaml  deploy.sh  deployment-steps.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
docs/: AGENT_CONNECT_PLAN.md  AGENT_CONNECT_PROPOSAL.md  AGENT_MESSAGE_STORE_SCAN_2026-05-04.md  ARCHITECTURE.md  ASSESSMENT.md  BACKEND_SCRUTINY_2026-05-22.md  BUGS.md  COMPANION_PROPOSAL.md  COMPETITIVE_ANALYSIS.md  DATA_ARCHITECTURE.md  DEEP_AGENTS_ANALYSIS_2026-05-13.md  DEPLOYMENT.md  DESKTOP_PACKAGING_PLAN_2026-05-13.md  DETERMINISTIC_MEMORY_RANKER_PLAN.md  DYNAMIC_SUBAGENTS_LESSONS_LEARNED.md  FACT_EXTRACTION_IMPROVEMENTS_2026-05-08.md  FAST_MODEL_LIST.md  FLUTTER_REVIEW_2026-05-13.md  FLUTTER_UX_PLAN.md  GBRAIN_MEMORY_ANALYSIS.md  HYBRIDDB_BUGFIXES_2026-05-04.md  HYBRIDDB_FIXES_2026-05-06.md  HYBRIDDB_IMPROVEMENTS.md  HYBRIDDB_SCAN_2026-05-04.md  HYBRIDDB_SCAN_2026-05-21.md  HYBRIDDB_SPEC.md  LANGFUSE_INTEGRATION_ANALYSIS.md  LANGFUSE_INTEGRATION_IMPLEMENTATION.md  LLM_WIKI_PLAN.md  LONGMEMEVAL_ANALYSIS_2026-05-07.md  LONGMEMEVAL_MEMPALACE_RECOMMENDATIONS.md  LONGMEMEVAL_PROGRESS_RECOMMENDATION_2026-05-07.md  LONGMEMEVAL_RESULTS_2026-05-07.md  LONGMEMEVAL_RUN_REVIEW_2026-05-07_133137_140027.md  MEMORY_FACTS_PROPOSAL.md  MEMORY_GRAPH_FACTS_PLAN.md  MEMORY_PERF_REPORT.md  MEMORY_RESEARCH.md  MEMORY_REWRITE_RESEARCH_2026-05-08.md  MEMORY_SCAN_2026-05-04.md  (+32 more)
features/: COMPLETE_CONTEXT_SYSTEM.md  EXISTING_INSTINCTS_ANALYSIS.md  GOAL_DYNAMICS.md  GOOGLE_OAUTH_LOCAL_SETUP.md  JOURNAL_CONCEPT_EVALUATION.md  JOURNAL_STORAGE_DESIGN.md  LANGCHAIN_TERMINOLOGY_PROPOSAL.md  MEMORY_BUG_ANALYSIS.md  MEMORY_JOURNAL_INTEGRATION.md  MEMORY_RENAME_DISCUSSION.md  PERSONA_ONBOARDING_TESTS_COMPLETE.md  PROMPT_ASSESSMENT_AND_TOOL_TESTS.md  REAL_LLM_INTEGRATION_COMPLETE.md  STRATEGIC_COMPACTION_PLAN.md  TECH_STACK_PROPOSAL.md  UNIFIED_CONTEXT_COMPLETE_REPORT.md  UNIFIED_CONTEXT_IMPLEMENTATION_SUMMARY.md  UNIFIED_CONTEXT_SYSTEM_COMPLETE.md  USER_CUSTOMIZATION_ARCHITECTURE.md  VECTOR_DB_EVALUATION.md  WEEK_2_INSTINCTS_MIGRATION_COMPLETE.md  WEEK_3_JOURNAL_COMPLETE.md  additional-llm-providers.md  email-calendar-contacts-integration.md  google-workspace-integration.md  gorules_poc_proposal.md  instincts_system_roadmap.md  memory_time_tiers_plan.md  onboarding_plan.md  personalization_refined.md  unified-context-system.md  user_instincts_storage.md  user_mcp_plan.md  user_prompt_plan.md  user_skills_plan.md
flutter_app/: appcast.xml  backend.spec  build_macos.sh  pubspec.yaml
improvements/: response-time-performance.md
migrations/: 000_init.sql  001_initial_schema.sql  002_workspace_to_group_rename.sql  003_add_identities_table.sql  004_reminders.sql  005_structured_summary.sql  006_drop_legacy_summary.sql
scripts/: __init__.py  benchmark_middlewares.py  benchmark_scenarios.py  benchmark_vector_stores.py  com.gmail.sync.plist  compare_gpt_oss_vs_gpt5.py  compare_results.py  (+18 more)
src/coremem/: pyproject.toml
src/coremem/src/coremem/: __init__.py  core.py  heuristics.py  ingest.py  layers.py  query.py  rerank.py  types.py
src/coremem/src/coremem/backends/: __init__.py  base.py  chroma.py  hybrid.py
src/coremem/tests/: conftest.py  test_backend_chroma.py  test_backend_hybrid.py  test_core.py  test_heuristics.py  test_layers.py
src/memcore/: pyproject.toml
src/memcore/src/memcore/: __init__.py  core.py  heuristics.py  ingest.py  layers.py  types.py
src/memcore/src/memcore/backends/: __init__.py  base.py  chroma.py  hybrid.py
src/memcore/tests/: test_backend_chroma.py  test_backend_hybrid.py  test_core.py  test_heuristics.py  test_layers.py
(+1216 files in other folders)
