[project]
name = "executive-assistant"
version = "0.1.0"
description = "Enterprise-ready personal agent with multi-LLM support"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Open Assistants Lab" }]
keywords = ["agent", "llm", "langchain", "ai", "assistant", "deep-agents"]

dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=1.1.9",
    "langchain-anthropic>=1.3.3",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=0.2.0",
    "langchain-cohere>=0.4.0",
    "langchain-qwq>=0.1.0",
    "langchain-deepseek>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "deepagents>=0.4.1",
    "deepagents-acp>=0.0.1",
    "langfuse>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "lancedb>=0.29.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.40.0",
    "typer>=0.15.0",
    "python-telegram-bot>=22.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.5.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

aws = [
    "boto3>=1.36.0",
]

[project.scripts]
ea = "src.cli.main:app"
ea-api = "src.api.main:run_server"
ea-acp = "src.acp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
