[project]
name = "executive-assistant"
version = "0.1.0"
description = "General purpose executive assistant agent using LangChain create_agent()"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "chromadb>=1.5.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.0.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "python-telegram-bot>=21.0",
    "langfuse>=3.14.0",
    "firecrawl-py>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]
http = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "sse-starlette>=2.0.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
ea = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
