[project]
name = "executive-assistant"
version = "0.3.0"
description = "Executive assistant agent with custom SDK runtime — LangChain-free"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "chromadb>=1.5.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.0.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "tiktoken>=0.9.0",
    "duckdb>=1.0.0",
    "sqlite-vec>=0.1.6",
    "cryptography>=41.0.0",
    "imap-tools>=1.0.0",
    "mcp>=1.0.0",
    "apscheduler>=3.11.2",
    "sentence-transformers>=5.2.3",
    "pyyaml>=6.0",
    "html2text>=2025.4.15",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "coremem>=0.9.1",
    "agentprofile",
    "hybriddb>=0.4.5",
    "connectkit==0.1.4",
    "mistune>=3.2.1",
]

[tool.uv.sources]
agentprofile = { path = "/Users/eddy/Developer/Python/AgentProfile", editable = true }

[project.optional-dependencies]
http = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "sse-starlette>=2.0.0",
]
graph = [
    "networkx>=3.0",
    "python-louvain>=0.16",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "networkx>=3.0",
    "python-louvain>=0.16",
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.0",
    "numpy>=1.24.0",
]

[project.scripts]
ea = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["src/skills_seed/skill-creator"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "benchmark: tests requiring pytest-benchmark (optional)",
]
norecursedirs = ["tests/hybriddb/benchmarks"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["src/skills_seed/"]
